hphp/hack/test/typecheck/sketchy_null.php
<?hh

function f(mixed $m): null {
  if ($m) {
    return null;
  } else {
    return $m;
  }
}
